--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "jwt node react",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec ./node_modules/.bin/babel-node ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/Thupha41/jwt-backend/issues"
   },
-  "homepage": "https://github.com/Thupha41/jwt-backend#readme"
+  "homepage": "https://github.com/Thupha41/jwt-backend#readme",
+  "dependencies": {
+    "body-parser": "1.19.1",
+    "dotenv": "10.0.0",
+    "ejs": "3.1.6",
+    "express": "4.17.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.4",
+    "@babel/node": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
+    "nodemon": "^2.0.15"
+  }
 }
