--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Thupha41/jwt-backend#readme",
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.1",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "mysql2": "2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.4",
