--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "express": "4.17.2",
-    "mysql2": "2.3.3"
+    "mysql2": "2.3.3",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.4",
