--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require("path");
 
 module.exports = {
-  config: path.resolve("./src", "configs", "config.json"),
+  config: path.resolve("./src", "configs", "config.js"),
   "models-path": path.resolve("./src", "models", "models"),
   "seeders-path": path.resolve("./src", "seeders", "seeders"),
-  "migrations-path": path.resolve("./src", "migrations", "models"),
+  "migrations-path": path.resolve("./src", "migrations", "migrations"),
 };
