--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,7 +2,7 @@ const path = require("path");
 
 module.exports = {
   config: path.resolve("./src", "configs", "config.js"),
-  "models-path": path.resolve("./src", "models", "models"),
-  "seeders-path": path.resolve("./src", "seeders", "seeders"),
-  "migrations-path": path.resolve("./src", "migrations", "migrations"),
+  "models-path": path.resolve("./src", "models"),
+  "seeders-path": path.resolve("./src", "seeders"),
+  "migrations-path": path.resolve("./src", "migrations"),
 };
