--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ./node_modules/.bin/babel-node ./src/server.js"
+    "start": "nodemon --exec ./node_modules/.bin/babel-node ./src/server.js",
+    "build-src": "babel src -d build --copy-files",
+    "build": "node build/server.js"
   },
   "repository": {
     "type": "git",
@@ -28,9 +30,10 @@
     "sequelize-cli": "6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.4",
+    "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.7",
     "@babel/node": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-env": "^7.25.7",
     "nodemon": "^2.0.15"
   }
 }
