--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.1",
+    "cookie-parser": "1.4.6",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "express": "4.17.2",
+    "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
     "sequelize": "6.13.0",
     "sequelize-cli": "6.3.0"
