--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "3.1.6",
     "express": "4.17.2",
     "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.21",
     "mysql2": "2.3.3",
     "sequelize": "6.13.0",
     "sequelize-cli": "6.3.0"
